Fix sidebars wrapping in Safari

--- a/assets/stylesheets/permitting/sidebars.scss
+++ b/assets/stylesheets/permitting/sidebars.scss
@@ -53,7 +53,7 @@
     .breakout-sidebar {
       width: 130%;
       display: flex;
-      flex-flow: row wrap;
+      flex-flow: row;
       align-items: flex-start;
       justify-content: space-between;
       blockquote {
